--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 body {
-    background-color:#292323;
+    background-color:#1D1A1A;
     
 }
 * {
