--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 body {
-    background-color:#1D1A1A;
+    background-color:#A9A1A1;
     
 }
 * {
@@ -8,7 +8,7 @@ body {
 }
 button {
     background:#5C32C4;
-    color:white;
+    color:#161313;
     padding: 1em;
     width:200px;
     text-align:center;
