--- a/src/app/start-chatting/start-chatting.component.css
+++ b/src/app/start-chatting/start-chatting.component.css
@@ -1,16 +1,19 @@
 input#message {
-    background:#BA8A8A;
+    background:#fff;
     border:none;
     outline:none;
+    box-shadow:none;
     font-size:1.6em;
-    font-weight:100;
+    font-weight:300;
     margin-bottom: 3em;
     padding:1.2em .7em;
 }
 
 #details-container {
-    display:inline;
-    width:50%;
+    display:flex;
+    flex-direction: row;
+    flex-wrap:wrap;
+    width:100%;
 }
 
 #details-container p {
@@ -23,6 +26,6 @@ input#message {
 }
 
 img {
-    float: left;
+    display:block;
     margin-bottom:12px;
 }
