--- a/src/styles.css
+++ b/src/styles.css
@@ -22,5 +22,10 @@ header{
 
 footer{
     color:black;
+    position:fixed;
+    left:0px;
+    bottom:0px;
+    height:30px;
+    width:100%;
     
 }
