--- a/src/app/start-chatting/start-chatting.component.css
+++ b/src/app/start-chatting/start-chatting.component.css
@@ -10,7 +10,7 @@ input#message {
 }
 
 #details-container {
-    display:flex;
+    display:inline;
     flex-direction: row;
     flex-wrap:wrap;
     width:100%;
