--- a/src/app/start-chatting/start-chatting.component.css
+++ b/src/app/start-chatting/start-chatting.component.css
@@ -1,5 +1,5 @@
 input#message {
-    background:#fff;
+    background:#CFAFAF;
     border:none;
     outline:none;
     box-shadow:none;
@@ -10,19 +10,22 @@ input#message {
 }
 
 #details-container {
-    display:inline;
-    flex-direction: row;
+    display: inline;
+    flex-direction:column;
     flex-wrap:wrap;
-    width:100%;
+    width: 80%;
+    
 }
 
 #details-container p {
-    background:#fff;
-    padding:1.4em;
-    color:#696969;
-    margin: 12px;
+    background:#BCB5CB;
+    padding:1em;
+    color:#0A0909;
+    margin: 5px;
     width:auto;
-    min-width:200px;
+    min-width:100px;
+    
+    
 }
 
 img {
