--- a/src/app/start-chatting/start-chatting.component.html
+++ b/src/app/start-chatting/start-chatting.component.html
@@ -1,11 +1,13 @@
 
 <div class="row columns">
-    <button (click)="login()" *ngIf="!(user | async)?.uid">Anonymous Login</button>
-    <button (click)="logout()" *ngIf="(user | async)?.uid">Logout</button>
-  
-    <input type="text" id="message" *ngIf="(user | async)?.uid" placeholder="Start Chatting Here!" (keyup.enter)="Send($event.target.value)" [(ngModel)]="msgVal" />
-    <div id="details-container">
-        <p *ngFor="let item of items | async">{{item.message}}<br></p>
-        <br>
+   <!-- <button (click)="login()" *ngIf="!(user | async)?.uid">Anonymous Login</button>
+    <button (click)="logout()" *ngIf="(user | async)?.uid">Logout</button>  "(user | async)?.uid"-->
+  <button (click)="login()" *ngIf="!name">login</button>
+  <button (click)="logout()"  *ngIf="name">Logout</button><br>
+    <input type="text" id="message" *ngIf="name"   placeholder="Start Chatting Here!" (keyup.enter)="Send($event.target.value)" [(ngModel)]="msgVal" />
+    <div id="details-container" *ngFor="let item of items | async" >
+        
+        <p>{{ item.name }} : {{item.message}}</p>
+        
     </div>
   </div>
